--- a/angular-learning-udemy/src/app/app.component.html
+++ b/angular-learning-udemy/src/app/app.component.html
@@ -1,7 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
+  <h3> Welcome to {{ title }}! </h3>
+</div>
+
+<div>
+  <app-server-list></app-server-list>
 </div>
 
