--- a/angular-learning-udemy/src/app/server/server.component.html
+++ b/angular-learning-udemy/src/app/server/server.component.html
@@ -1,1 +1,6 @@
-<p> My Server Component </p>
+<!--ngStyle directive expects a javascript object as key-value pair-->
+<!--ngClass directive points to a style-class defined in respective component with inline css or outside-->
+<h4 [ngStyle]="{backgroundColor: getColor()}"
+    [ngClass]="{online: serverStatus === 'online'}"> 
+    Server with ID {{ serverId }}, status is {{ getServerStatus() }} 
+</h4>
