Defined component positions in respective HTML files.

--- a/RecipeBookProject/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/RecipeBookProject/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,3 +1,2 @@
-<p>
-  recipe-list works!
-</p>
+<!--Recipe-list will contain list of individual recipe-item components-->
+<app-recipe-item></app-recipe-item>
