--- a/RecipeBookProject/src/app/app.component.html
+++ b/RecipeBookProject/src/app/app.component.html
@@ -1,10 +1,12 @@
 <!--Header Component-->
 <app-header></app-header>
 
+<!--Body with Recipe and Shopping component holder-->
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h2>I am working..</h2>
+      <app-recipes></app-recipes>
+      <app-shopping-list></app-shopping-list>
     </div>
   </div>
 </div>
