--- a/RecipeBookProject/src/app/recipes/recipes.component.html
+++ b/RecipeBookProject/src/app/recipes/recipes.component.html
@@ -1,3 +1,12 @@
-<p>
-  recipes works!
-</p>
+<!-- Recipe component to hold both recipe-list and recipe-detail components
+  Column1: To display list of recipes
+  Column2: To display recipe details
+ -->
+<div class="row">
+  <div class="col-md-5">
+    <app-recipe-list></app-recipe-list>
+  </div>
+  <div class="col-md-7">
+    <app-recipe-detail></app-recipe-detail>
+  </div>
+</div>
