--- a/RecipeBookProject/src/app/shopping-list/shopping-list.component.html
+++ b/RecipeBookProject/src/app/shopping-list/shopping-list.component.html
@@ -1,9 +1,19 @@
 
+<!--Shopping list-->
 <div class="row">
   <div class="col-xs-10">
     <app-shopping-edit></app-shopping-edit>
     <hr>
 
-    <p>The list</p>
+    <!-- List of Ingredients -->
+    <ul class="list-group">
+      <a 
+        class="list-group-item" 
+        style="cursor: pointer"
+        *ngFor="let ingredient of ingredients"
+        >
+        {{ ingredient.name }} ({{ ingredient.amount}} in gm.)
+      </a>
+    </ul>
   </div>
 </div>
