Data binding with custom event, custom event emitter with Component communication

--- a/angular-learning-udemy/src/app/app.component.html
+++ b/angular-learning-udemy/src/app/app.component.html
@@ -4,6 +4,10 @@
 </div>
 
 <div>
-  <app-server-list></app-server-list>
+  <!--1st example-->
+  <!--<app-server-list></app-server-list>-->
+
+  <!--databind example-->
+  <app-databind></app-databind>
 </div>
 
