--- a/RecipeBookProject/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/RecipeBookProject/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,12 +1,16 @@
 <div class="row">
   <div class="col-xs-12">
-    <img src="" alt="" class="img-responsive">
+    <img 
+      [src]="recipeDetail.imagePath" 
+      alt="{{recipeDetail.name}}" 
+      class="img-responsive" 
+      style="max-height: 150px" >
   </div>
 </div>
 
 <div class="row">
   <div class="col-xs-12">
-    <h1>Recipe Name</h1>
+    <h1>Recipe: {{recipeDetail.name}}</h1>
   </div>
 </div>
 
@@ -30,11 +34,11 @@
 
 <div class="row">
   <div class="col-xs-12">
-    Description
+    Description: {{recipeDetail.description}}
   </div>
 </div>
 <div class="row">
-    <div class="col-xs-12">
-      Ingredients
-    </div>
+  <div class="col-xs-12">
+    Ingredients
   </div>
+</div>
