--- a/RecipeBookProject/src/app/recipes/recipes.component.html
+++ b/RecipeBookProject/src/app/recipes/recipes.component.html
@@ -4,9 +4,15 @@
  -->
 <div class="row">
   <div class="col-md-5">
-    <app-recipe-list></app-recipe-list>
+    <app-recipe-list
+      (recipeWasSelected) = "selectedRecipe = $event"></app-recipe-list>
   </div>
   <div class="col-md-7">
-    <app-recipe-detail></app-recipe-detail>
+    <app-recipe-detail
+      *ngIf="selectedRecipe; else infoRecipeText"
+      [recipeDetail] = "selectedRecipe" ></app-recipe-detail>
+      <ng-template #infoRecipeText>
+        <p>Please select a Recipe!!!</p>
+      </ng-template>
   </div>
 </div>
