--- a/RecipeBookProject/src/app/shopping-list/shopping-list.component.html
+++ b/RecipeBookProject/src/app/shopping-list/shopping-list.component.html
@@ -2,7 +2,8 @@
 <!--Shopping list-->
 <div class="row">
   <div class="col-xs-10">
-    <app-shopping-edit></app-shopping-edit>
+    <app-shopping-edit
+     (ingredientAdded)="onIngredientAdded($event)"></app-shopping-edit>
     <hr>
 
     <!-- List of Ingredients -->
