--- a/angular-learning-udemy/src/app/databind/databind.component.html
+++ b/angular-learning-udemy/src/app/databind/databind.component.html
@@ -12,5 +12,8 @@
         [srvElement]="serverElement"></app-server-element>
     </div>
   </div>
+
+  <p appHighLightDirective> Style me with HighLight Directive</p>
+  <p betterHighLightDirective> Style me with HighLight Directive</p>
 </div>
   
