--- a/RecipeBookProject/src/app/header/header.component.html
+++ b/RecipeBookProject/src/app/header/header.component.html
@@ -11,7 +11,7 @@
                     <li><a href="#" (click)="onSelect('shopping-list')">Shopping List</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="dorpdown">
+                    <li class="dorpdown" appDropdown>
                         <a href="#" class="dorpdown-toggle" role="button">Manage <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Save Data</a></li>
