--- a/RecipeBookProject/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/RecipeBookProject/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -16,18 +16,20 @@
 
 <div class="row">
   <div class="col-xs-12">
-    <div class="btn-group">
+    <!--Added Custom Directive for dropdown that "appDropdown"-->
+    <div class="btn-group" appDropdown>
       <button 
         type="button" 
         class="btn btn-primary dropdown-toggle">
         Manage Recipe
         <span class="caret"></span>
-        <ul class="dropdown-menu">
-          <li><a href="">Add to Shopping List</a></li>
-          <li><a href="">Edit Recipe</a></li>
-          <li><a href="">Delete Recipe</a></li>
-        </ul>
       </button>
+        <ul class="dropdown-menu">
+          <li><a href="#">Add to Shopping List</a></li>
+          <li><a href="#">Edit Recipe</a></li>
+          <li><a href="#">Delete Recipe</a></li>
+        </ul>
+      
     </div>
   </div>
 </div>
