--- a/RecipeBookProject/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/RecipeBookProject/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -21,15 +21,14 @@
       <button 
         type="button" 
         class="btn btn-primary dropdown-toggle">
-        Manage Recipe
-        <span class="caret"></span>
+          Manage Recipe
+          <span class="caret"></span>
       </button>
         <ul class="dropdown-menu">
-          <li><a href="#">Add to Shopping List</a></li>
+          <li><a (click)="onAddToShoppingList()" style="cursor: pointer;">Add to Shopping List</a></li>
           <li><a href="#">Edit Recipe</a></li>
           <li><a href="#">Delete Recipe</a></li>
-        </ul>
-      
+        </ul>      
     </div>
   </div>
 </div>
@@ -41,6 +40,14 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    Ingredients
+    <br>
+    Ingredients required !!!
+    <ul class="list-group">
+      <li 
+        class="list-group-item"
+        *ngFor="let ingredient of recipeDetail.ingredients">
+        {{ingredient.name}} ({{ingredient.amount}} in gm.)
+      </li>
+    </ul>
   </div>
 </div>
