--- a/angular-services-learning/src/app/servers/servers.component.html
+++ b/angular-services-learning/src/app/servers/servers.component.html
@@ -10,6 +10,7 @@
     </div>
   </div>
   <div class="col-xs-12 col-sm-4">
+    <button class="but btn-primary" (click)="onReload()">Reload Server Page</button>
     <app-edit-server></app-edit-server>
     <hr>
     <app-server></app-server>
