--- a/angular-services-learning/src/app/home/home.component.html
+++ b/angular-services-learning/src/app/home/home.component.html
@@ -3,4 +3,9 @@
 
 <button class="btn btn-primary" (click)="onLoadServer(1)"> Load Server 1</button>
 
+<hr> <hr>
+
+<button type="button" class="btn btn-default" (click)="onLogin()">Login</button>
+<button type="button" class="btn btn-default" (click)="onLogout()">Logout</button>
+
 
