RecipeBook: Routing link applied and modified project accordingly

--- a/RecipeBookProject/src/app/recipes/recipes.component.html
+++ b/RecipeBookProject/src/app/recipes/recipes.component.html
@@ -7,11 +7,6 @@
     <app-recipe-list></app-recipe-list>
   </div>
   <div class="col-md-7">
-    <app-recipe-detail
-      *ngIf="selectedRecipe; else infoRecipeText"
-      [recipeDetail] = "selectedRecipe" ></app-recipe-detail>
-      <ng-template #infoRecipeText>
-        <p>Please select a Recipe!!!</p>
-      </ng-template>
+    <router-outlet></router-outlet>
   </div>
 </div>
