--- a/RecipeBookProject/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/RecipeBookProject/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,14 +1,17 @@
 <!--Recipe-list will contain list of individual recipe-item components-->
 <div class="row">
     <div class="col-xs-12">
-        <button class="btn btn-success">New Recipe</button>
+        <button 
+            class="btn btn-success"
+            (click)="onNewRecipe()">New Recipe</button>
     </div>
 </div>
 <hr>
 <div class="row">
     <div class="col-xs-12">        
         <app-recipe-item 
-            *ngFor="let recipeItem of recipes"
-            [recipe]="recipeItem"></app-recipe-item>
+            *ngFor="let recipeItem of recipes; let i = index"
+            [recipe]="recipeItem"
+            [index]="i"></app-recipe-item>
     </div>
 </div>
