--- a/angular-learning-udemy/src/app/app.component.html
+++ b/angular-learning-udemy/src/app/app.component.html
@@ -1,13 +1,43 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<!--<div style="text-align:center">
   <h3> Welcome to {{ title }}! </h3>
-</div>
+</div>-->
 
 <div>
   <!--1st example-->
   <!--<app-server-list></app-server-list>-->
 
   <!--databind example-->
-  <app-databind></app-databind>
+  <!--<app-databind></app-databind>-->
+
+  <!--Form Example-->
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-sm-10 col-md-8 col sm-offset-1 col-md-offset-2">
+        <form>
+          <div id="user-data">
+            <div class="form-group">
+              <label for="username">User Name</label>
+              <input type="text" id="userName" class="form-control" />
+            </div>
+            <button class="btn btn-default" type="button">Suggest a user name</button>
+            <div class="form-group">
+              <label for="email">User Name</label>
+              <input type="text" id="email" class="form-control">
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="secret">Secret Question</label>
+            <select class="form-control" id="secret">
+              <option value="pet">Your first pet?</option>
+              <option value="teacher">Your first teacher?</option>
+            </select>            
+          </div>          
+
+          <button class="btn btn-primary" type="submit">Submit</button>
+        </form>
+      
+    </div>
+  </div>
 </div>
 
