--- a/angular-learning-udemy/src/app/app.component.html
+++ b/angular-learning-udemy/src/app/app.component.html
@@ -14,21 +14,35 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-10 col-md-8 col sm-offset-1 col-md-offset-2">
-        <form>
+        <form (ngSubmit)="onSubmit()">
           <div id="user-data">
             <div class="form-group">
               <label for="username">User Name</label>
-              <input type="text" id="userName" class="form-control" />
+              <input 
+                type="text" 
+                id="userName" 
+                class="form-control" 
+                ngModel
+                name="userName">
             </div>
             <button class="btn btn-default" type="button">Suggest a user name</button>
             <div class="form-group">
               <label for="email">User Name</label>
-              <input type="text" id="email" class="form-control">
+              <input 
+                type="text" 
+                id="email" 
+                class="form-control"
+                ngModel
+                name="email">
             </div>
           </div>
           <div class="form-group">
             <label for="secret">Secret Question</label>
-            <select class="form-control" id="secret">
+            <select 
+              class="form-control" 
+              id="secret"
+              ngModel
+              name="secret">
               <option value="pet">Your first pet?</option>
               <option value="teacher">Your first teacher?</option>
             </select>            
