--- a/angular-learning-udemy/src/app/app.component.html
+++ b/angular-learning-udemy/src/app/app.component.html
@@ -24,7 +24,8 @@
                 id="userName" 
                 class="form-control" 
                 ngModel
-                name="userName">
+                name="userName"
+                required>
             </div>
             <button class="btn btn-default" type="button">Suggest a user name</button>
             <div class="form-group">
@@ -34,8 +35,13 @@
                 id="email" 
                 class="form-control"
                 ngModel
-                name="email">
+                name="email"
+                required
+                email
+                #email="ngModel">
+                <span class="help-block" *ngIf="!email.valid && email.touched">Please enter a valid Email!</span>
             </div>
+            
           </div>
           <div class="form-group">
             <label for="secret">Secret Question</label>
@@ -49,7 +55,10 @@
             </select>            
           </div>          
 
-          <button class="btn btn-primary" type="submit">Submit</button>
+          <button 
+            class="btn btn-primary" 
+            type="submit"
+            [disabled]=!frm.valid>Submit</button>
         </form>
       
     </div>
