--- a/angular-learning-udemy/src/app/app.component.html
+++ b/angular-learning-udemy/src/app/app.component.html
@@ -48,12 +48,20 @@
             <select 
               class="form-control" 
               id="secret"
-              ngModel
+              [ngModel]="dafaultQuestion"
               name="secret">
               <option value="pet">Your first pet?</option>
               <option value="teacher">Your first teacher?</option>
             </select>            
-          </div>          
+          </div>       
+          <div class="form-group">
+            <textarea 
+              name="questionAnswer" 
+              rows="3"
+              class="form-control"
+              [(ngModel)]="answer"></textarea>
+          </div>   
+          <p >Your repl: {{answer}}</p>
 
           <button 
             class="btn btn-primary" 
