--- a/angular-learning-udemy/src/app/app.component.html
+++ b/angular-learning-udemy/src/app/app.component.html
@@ -16,7 +16,11 @@
       <div class="col-xs-12 col-sm-10 col-md-8 col sm-offset-1 col-md-offset-2">
         <!--Local ref element "frm" for ngForm object created and passed-->
         <form (ngSubmit)="onSubmit(frm)" #frm="ngForm">
-          <div id="user-data">
+          <div 
+            id="user-data" 
+            ngModelGroup="userData"
+            #userData="ngModelGroup">
+
             <div class="form-group">
               <label for="username">User Name</label>
               <input 
@@ -29,7 +33,7 @@
             </div>
             <button class="btn btn-default" type="button">Suggest a user name</button>
             <div class="form-group">
-              <label for="email">User Name</label>
+              <label for="email">Email: </label>
               <input 
                 type="text" 
                 id="email" 
@@ -41,6 +45,7 @@
                 #email="ngModel">
                 <span class="help-block" *ngIf="!email.valid && email.touched">Please enter a valid Email!</span>
             </div>
+            <p *ngIf="!userData.valid && userData.touched">User data is invalid!</p>
             
           </div>
           <div class="form-group">
