LearningApp: User data suggestion with full user object

--- a/angular-learning-udemy/src/app/app.component.html
+++ b/angular-learning-udemy/src/app/app.component.html
@@ -31,7 +31,10 @@
                 name="userName"
                 required>
             </div>
-            <button class="btn btn-default" type="button">Suggest a user name</button>
+            <button 
+              class="btn btn-default" 
+              type="button"
+              (click)="suggestedUserName()">Suggest a user name</button>
             <div class="form-group">
               <label for="email">Email: </label>
               <input 
