LearningApp: Reactive form creation example.

--- a/angular-learning-udemy/src/app/app.component.html
+++ b/angular-learning-udemy/src/app/app.component.html
@@ -16,6 +16,10 @@
   <app-form-template-driven></app-form-template-driven>
   -->
 
+  <!--Form Data with Reactive Approach -->
+  <app-form-reactive></app-form-reactive>
+  
+
   
 
 
