--- a/angular-learning-udemy/src/app/form-reactive/form-reactive.component.html
+++ b/angular-learning-udemy/src/app/form-reactive/form-reactive.component.html
@@ -11,6 +11,10 @@
             id="username"
             class="form-control"
             formControlName="userName">
+            <span class="help-block"
+              *ngIf="!signupForm.get('userName').valid && signupForm.get('userName').touched" >
+                Please enter a valid user name!
+            </span>
         </div>
         <div class="form-group">
           <label for="email">email</label>
