LearningApp: Set value for ALL form controls, partial value set and form reset.

--- a/angular-learning-udemy/src/app/form-reactive/form-reactive.component.html
+++ b/angular-learning-udemy/src/app/form-reactive/form-reactive.component.html
@@ -51,7 +51,9 @@
               [value]="gender">{{ gender }}
           </label>
         </div>
-        <button class="btn btn-primary" type="submit">Submit</button>
+        <button class="btn btn-primary" type="button" (click)="onSubmit()">Submit</button>
+        <button class="btn btn-primary" type="button" (click)="onSetValue()">Set Value</button>
+        <button class="btn btn-primary" type="button" (click)="onPatchValue()">Patch Value</button>
       </form>
     </div>
   </div>
