RecipeBook: Edit Recipe with Reactive form approach: Cancel and refinements with Router Navigation

--- a/RecipeBookUdemy/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/RecipeBookUdemy/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -3,11 +3,15 @@
     <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
       <div class="row">
         <div class="col-xs-12">
+          
           <button 
             type="submit" 
             class="btn btn-success"
             [disabled]="!recipeForm.valid">Save</button>
-          <button type="button" class="btn btn-danger">Cancel</button>
+
+          <button type="button" 
+            class="btn btn-danger" (click)="onCancel()">Cancel</button>
+
         </div>
       </div>
 
@@ -29,13 +33,14 @@
             <input type="text" 
               id="imagePath" 
               formControlName="imagePath"
+              #imagePath
               class="form-control">
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <img src="" class="img-responsive">
+          <img [src]="imagePath.value" class="img-responsive">
         </div>
       </div>
       <div class="row">
