--- a/angular-learning-udemy/src/app/form-reactive/form-reactive.component.html
+++ b/angular-learning-udemy/src/app/form-reactive/form-reactive.component.html
@@ -11,13 +11,16 @@
               type="text"
               id="username"
               class="form-control"
-              formControlName="userName">
+              formControlName="userName"
+              #locRefUserName>
               <span class="help-block"
                 *ngIf="!signupForm.get('userData.userName').valid && signupForm.get('userData.userName').touched" >
                 <span 
                   *ngIf="signupForm.get('userData.userName').errors['nameIsForbidden']">This name is invalid!</span>
                   Please enter a valid user name!
               </span>
+
+              Piped Value: {{ locRefUserName.value | shorten: 10 | uppercase}}
           </div>
           <div class="form-group">
             <label for="email">email</label>
