WorkingState: Angular-8 Recipe Book

--- a/RecipeBookUdemy/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/RecipeBookUdemy/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -3,24 +3,20 @@
     <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
       <div class="row">
         <div class="col-xs-12">
-          
-          <button 
-            type="submit" 
+          <button
+            type="submit"
             class="btn btn-success"
             [disabled]="!recipeForm.valid">Save</button>
-
-          <button type="button" 
-            class="btn btn-danger" (click)="onCancel()">Cancel</button>
-
+          <button type="button" class="btn btn-danger" (click)="onCancel()">Cancel</button>
         </div>
       </div>
-
       <div class="row">
         <div class="col-xs-12">
           <div class="form-group">
-            <label for="name">Name: </label>
-            <input type="text" 
-              id="name" 
+            <label for="name">Name</label>
+            <input
+              type="text"
+              id="name"
               formControlName="name"
               class="form-control">
           </div>
@@ -29,12 +25,13 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="form-group">
-            <label for="imagePath">Image URL: </label>
-            <input type="text" 
-              id="imagePath" 
+            <label for="imagePath">Image URL</label>
+            <input
+              type="text"
+              id="imagePath"
               formControlName="imagePath"
-              #imagePath
-              class="form-control">
+              class="form-control"
+              #imagePath>
           </div>
         </div>
       </div>
@@ -46,34 +43,38 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="form-group">
-            <label for="description">Description: </label>
-            <textarea type="text" 
-              id="description" 
-              formControlName="description"
+            <label for="description">Description</label>
+            <textarea
+              type="text"
+              id="description"
               class="form-control"
+              formControlName="description"
               rows="6"></textarea>
           </div>
         </div>
       </div>
-
       <div class="row">
-        <div class="col-xs-12" formArrayName='ingredients'>
-          <div class="row"
+        <div class="col-xs-12" formArrayName="ingredients">
+          <div
+            class="row"
             *ngFor="let ingredientCtrl of recipeForm.get('ingredients').controls; let i = index"
             [formGroupName]="i"
-            style="margin-top: 10px">
+            style="margin-top: 10px;">
             <div class="col-xs-8">
-              <input type="text" 
+              <input
+                type="text"
                 class="form-control"
                 formControlName="name">
             </div>
             <div class="col-xs-2">
-              <input type="number" 
+              <input
+                type="number"
                 class="form-control"
                 formControlName="amount">
             </div>
             <div class="col-xs-2">
-              <button type="button" 
+              <button
+                type="button"
                 class="btn btn-danger"
                 (click)="onDeleteIngredient(i)">X</button>
             </div>
@@ -81,16 +82,14 @@
           <hr>
           <div class="row">
             <div class="col-xs-12">
-              <button 
+              <button
                 type="button"
-                class="btn btn-success" 
+                class="btn btn-success"
                 (click)="onAddIngredient()">Add Ingredient</button>
             </div>
           </div>
-          
         </div>
       </div>
-
     </form>
   </div>
 </div>
