--- a/RecipeBookUdemy/src/app/auth/auth.component.html
+++ b/RecipeBookUdemy/src/app/auth/auth.component.html
@@ -1,8 +1,16 @@
+<!--<ng-template appPlaceholder>
+</ng-template>-->
+
 <div class="row">
   <div class="col-xs-12 col-md-6 col-md-offset-3">
-    <div class="alert alert-danger" *ngIf="error">
+    <!-- //on page error message
+      <div class="alert alert-danger" *ngIf="error">
       <p>{{ error }}</p>
-    </div>
+    </div>-->
+
+    <!-- uncomment to use this in place of Dynamic component ng-template(appPlaceHolder)-->
+      <app-alert [message]=error *ngIf="error" (close)="onHandleError()"></app-alert>    
+
     <div *ngIf="isLoading" style="text-align: center;">
       <app-loading-spinner></app-loading-spinner>
     </div>
