--- a/angular-learning-udemy/src/app/app.component.html
+++ b/angular-learning-udemy/src/app/app.component.html
@@ -1,12 +1,12 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<!--<div style="text-align:center">
-  <h3> Welcome to {{ title }}! </h3>
-  </div>-->
+  <!--Data Binding: String interpolation Example.-->  
+    <div style="text-align:center">
+      <h3> Welcome {{ name }}! in Angular journy.</h3>
+    </div>
+    <hr>
 
-
-  <!--1st example
+  <!--1st example-->
   <app-server-list></app-server-list>
-  -->
+  
 
   <!--databind example
   <app-databind></app-databind>
@@ -17,7 +17,7 @@
   -->
 
   <!--Form Data with Reactive Approach -->
-  <app-form-reactive></app-form-reactive>
+  <!--<app-form-reactive></app-form-reactive>-->
   
 
   
