Learn Angular: Learning Project and notes

--- a/angular-learning-udemy/src/app/app.component.html
+++ b/angular-learning-udemy/src/app/app.component.html
@@ -4,13 +4,18 @@
     </div>
     <hr>
 
-  <!--1st example-->
-  <app-server-list></app-server-list>
-  
+  <!--Angular Basics (2): 
+  <app-server-list></app-server-list>-->
 
-  <!--databind example
-  <app-databind></app-databind>
-  -->
+  <!--databind: Component communication, Input, Output, ViewChild
+  <app-databind></app-databind>-->
+
+  <!--Services: -->
+  <app-service></app-service>
+
+  <!--Dierectives: Stuctural and Attibute Directives and Custom Directive Creation
+  <app-directives></app-directives>-->
+  
 
   <!--Form Data with Template Driven Approach 
   <app-form-template-driven></app-form-template-driven>
