Angular: Routes example

--- a/angular-learning-udemy/src/app/app.component.html
+++ b/angular-learning-udemy/src/app/app.component.html
@@ -10,12 +10,14 @@
   <!--databind: Component communication, Input, Output, ViewChild
   <app-databind></app-databind>-->
 
-  <!--Services: -->
-  <app-service></app-service>
+  <!--Services: 
+  <app-service></app-service>-->
 
   <!--Dierectives: Stuctural and Attibute Directives and Custom Directive Creation
   <app-directives></app-directives>-->
-  
+
+  <!--Routes: -->
+  <app-routes-example></app-routes-example>
 
   <!--Form Data with Template Driven Approach 
   <app-form-template-driven></app-form-template-driven>
