--- a/angular-learning-udemy/src/app/routes-example/servers/serversroute.component.html
+++ b/angular-learning-udemy/src/app/routes-example/servers/serversroute.component.html
@@ -3,7 +3,7 @@
     <div class="list-group">
       <a
         [routerLink]="['/servers', server.id]"
-        [queryParams]="{allowEdit: '1'}"
+        [queryParams]="{allowEdit: server.id === 3 ? '1' : '0'}"
         fragment="loading"
         class="list-group-item"
         *ngFor="let server of servers">
@@ -19,9 +19,11 @@
     <a routerLink="servers">Reload Server Page</a>-->
     <button class="btn btn-primary" (click)="onReload()">Reload Server Page (RelativePath)</button>
 
-    <app-edit-serverroute></app-edit-serverroute>
+    <!--<app-edit-serverroute></app-edit-serverroute>
     <hr>
-    <!--<app-serverroute></app-serverroute>-->
+    <app-serverroute></app-serverroute>-->
+    <!--Used by child routes of servers-->
+    <router-outlet></router-outlet>
   </div>
 </div>
 
