--- a/angular-learning-udemy/src/app/app.component.html
+++ b/angular-learning-udemy/src/app/app.component.html
@@ -5,26 +5,28 @@
     <hr>
 
   <!--Angular Basics (2): 
-  <app-server-list></app-server-list>-->
+  <app-server-list></app-server-list> -->
 
   <!--databind: Component communication, Input, Output, ViewChild
-  <app-databind></app-databind>-->
+  <app-databind></app-databind> -->
 
   <!--Services: 
-  <app-service></app-service>-->
+  <app-service></app-service> -->
 
   <!--Dierectives: Stuctural and Attibute Directives and Custom Directive Creation
-  <app-directives></app-directives>-->
+  <app-directives></app-directives> -->
 
-  <!--Routes: -->
-  <app-routes-example></app-routes-example>
+  <!--Routes, ChildRoute, Resolver, Static/Dynamic data pass, AuthGuard, ChildGuard
+  <app-routes-example></app-routes-example> -->
 
-  <!--Form Data with Template Driven Approach 
-  <app-form-template-driven></app-form-template-driven>
-  -->
+  <!--Observable (rxjs), Subject
+  <app-observable-example></app-observable-example> -->
 
-  <!--Form Data with Reactive Approach -->
-  <!--<app-form-reactive></app-form-reactive>-->
+  <!--Form: Template Driven Approach
+  <app-form-template-driven></app-form-template-driven> -->
+
+  <!--Form: Reactive Approach -->
+  <app-form-reactive></app-form-reactive>
   
 
   
