--- a/angular-learning-udemy/src/app/form-template-driven/form-template-driven.component.html
+++ b/angular-learning-udemy/src/app/form-template-driven/form-template-driven.component.html
@@ -1,6 +1,9 @@
-<h1>Form with Template Driven Approach Example</h1>
+<div style="text-align:center">
+    <h1>Form with Template Driven Approach Example</h1>
+</div>>
 
-<!--Form Example-->
+
+<!--Form: Template Driven Approach-->
 <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-10 col-md-8 col sm-offset-1 col-md-offset-2">
